[package]
name = "oxifuzz"
description = ""
version = "0.1.0"
edition = "2021"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
license = "MIT"
# license-file = "./LICENSE"
readme = "README.md"
repository = "https://github.com/unlink2/rust-template"

[features]
default = ["cli"]
cli = ["log", "dep:clap", "dep:clap_complete", "dep:console", "dep:shell-words"]
log = ["dep:simple_logger"]

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"], optional = true }
clap_complete = { version = "4.0.7", optional = true }
lazy_static = "1.4.0"
thiserror = "1.0.38"
log = "0.4.17"
simple_logger = { optional = true, version = "4.0.0" }
rand = "0.8.5"
console = { version = "0.15.5", optional = true }
shell-words = { version = "1.1.0", optional = true }
regex = "1.7.3"
isahc = "1.7"

[dev-dependencies]
